# memoir-capture

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  spec.md  vcpkg.json
.github/workflows/: build.yml
docs/: engine.md  meta-format.md
include/memoir/: capture_engine.h  frame_packet.h  meta_format.h  recording_session.h  types.h  version.h
memoir/: __init__.py
memoir_capture/: __init__.py  _engine.py  _meta.py  _types.py
scripts/: build.ps1
src/bindings/: module.cpp
src/core/: capture_engine.cpp  keyboard.cpp  keyboard.h  window_finder.cpp  window_finder.h
src/recording/: recording_session.cpp
tests/: conftest.py
tests/python/: record_10s.py  test_capture.py  test_color_cycle.py  test_import.py  test_lifecycle.py  test_meta_reader.py  test_recording.py  test_split_recording.py  test_window_close.py
