[project]
name = "memoir-capture"
version = "0.1.2"
description = "Windows-native capture/replay module with Python bindings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
cv = ["opencv-python"]

[project.urls]
Repository = "https://github.com/lunavod/memoir-capture"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake",
    "-DVCPKG_OVERLAY_TRIPLETS=cmake/triplets",
    "-DVCPKG_TARGET_TRIPLET=x64-windows-release",
]
wheel.packages = ["memoir_capture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["capture: requires a live display for WGC capture"]
